exports[`Full App full app display 1`] = `
<div>
  <ImageView
    onClick={[Function]}
    view={null} />
</div>
`;

exports[`Full App gallery display 1`] = `
<div>
  <ViewSelector
    onGallery={[Function]} />
  <ImageView
    view={null} />
</div>
`;

exports[`Full App list display 1`] = `
<div>
  <ViewSelector
    onList={[Function]} />
  <ImageView
    view={null} />
</div>
`;

exports[`Full App thumbnail display 1`] = `
<div>
  <ViewSelector
    onThumbnail={[Function]} />
  <ImageView
    view={null} />
</div>
`;
